k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-cicd
  namespace: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-cicd
  template:
    metadata:
      labels:
        app: hello-cicd
    spec:
      containers:
        - name: hello-cicd
          image: docker.io/uz2idkfwxm/hello-cicd:2737b38
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
