k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-cicd
  namespace: apps
spec:
  type: NodePort
  selector:
    app: hello-cicd
  ports:
    - port: 80
      targetPort: 8080
